Disable email and website links until domain is connected

--- a/contact.html
+++ b/contact.html
@@ -593,11 +593,11 @@
                     <div class="info-content">
                         <h3>Email Us</h3>
                         <p>For general inquiries:<br>
-                        <a href="mailto:info@zeroatecosystem.com">info@zeroatecosystem.com</a></p>
+                        <span style="cursor: not-allowed; opacity: 0.6;" title="Available when domain is connected">info@zeroatecosystem.com</span></p>
                         <p style="margin-top: 0.5rem;">For sales:<br>
-                        <a href="mailto:sales@zeroatecosystem.com">sales@zeroatecosystem.com</a></p>
+                        <span style="cursor: not-allowed; opacity: 0.6;" title="Available when domain is connected">sales@zeroatecosystem.com</span></p>
                         <p style="margin-top: 0.5rem;">For support:<br>
-                        <a href="mailto:support@zeroatecosystem.com">support@zeroatecosystem.com</a></p>
+                        <span style="cursor: not-allowed; opacity: 0.6;" title="Available when domain is connected">support@zeroatecosystem.com</span></p>
                     </div>
                 </div>
 
