--- a/index.html
+++ b/index.html
@@ -1142,11 +1142,11 @@
         <div class="contact-grid">
             <div class="contact-item">
                 <h3>Email</h3>
-                <p><a href="mailto:info@zeroatecosystem.com">info@zeroatecosystem.com</a></p>
+                <p style="cursor: not-allowed; opacity: 0.6;" title="Available when domain is connected">info@zeroatecosystem.com</p>
             </div>
             <div class="contact-item">
                 <h3>Web</h3>
-                <p><a href="https://www.zeroatecosystem.com" target="_blank">www.zeroatecosystem.com</a></p>
+                <p style="cursor: not-allowed; opacity: 0.6;" title="Available when domain is connected">www.zeroatecosystem.com</p>
             </div>
             <div class="contact-item">
                 <h3>Headquarters</h3>
@@ -1164,7 +1164,7 @@
 <section class="cta-section">
     <h2 class="cta-title">Ready to Lead Your Industry?</h2>
     <div class="cta-buttons">
-        <a href="mailto:info@zeroatecosystem.com" class="cta-button">Schedule a Demo</a>
+        <a href="contact.html" class="cta-button">Schedule a Demo</a>
         <a href="#" class="cta-button cta-button-outline">Download White Paper</a>
         <a href="aez.html" class="cta-button">Zero at Production DPP</a>
     </div>
