--- a/contact.html
+++ b/contact.html
@@ -469,12 +469,56 @@
         footer a:hover {
             opacity: 1;
         }
+
+        /* Scroll to Top Button */
+        .scroll-to-top {
+            position: fixed;
+            bottom: 2rem;
+            right: 2rem;
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, #f9ba00, #ffd54f);
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            color: #02154e;
+            box-shadow: 0 4px 15px rgba(249, 186, 0, 0.3);
+            transition: all 0.3s ease;
+            z-index: 999;
+            opacity: 0;
+            transform: translateY(20px);
+        }
+
+        .scroll-to-top.visible {
+            display: flex;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .scroll-to-top:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(249, 186, 0, 0.5);
+            background: linear-gradient(135deg, #ffd54f, #f9ba00);
+        }
+
+        .scroll-to-top:active {
+            transform: translateY(-2px);
+        }
     </style>
 </head>
 
 <body>
     <!-- Zero Brand Bar -->
     <div class="zero-color-bar"></div>
+
+    <!-- Scroll to Top Button -->
+    <button class="scroll-to-top" id="scrollToTop" aria-label="Scroll to top">
+        ↑
+    </button>
 
     <!-- Header -->
     <header class="app-header">
@@ -862,6 +906,24 @@
             } else {
                 this.style.borderColor = 'var(--zero-gray-light)';
             }
+        });
+
+        // Scroll to Top functionality
+        const scrollToTopBtn = document.getElementById('scrollToTop');
+        
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 300) {
+                scrollToTopBtn.classList.add('visible');
+            } else {
+                scrollToTopBtn.classList.remove('visible');
+            }
+        });
+
+        scrollToTopBtn.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
         });
     </script>
 </body>
