Add Return to HomePage button to all DPP pages

--- a/chemıcals-dyes.html
+++ b/chemıcals-dyes.html
@@ -97,6 +97,28 @@
 <p class="p2"><br></p>
 <p class="p1">.title-at { color: var(–zero-orange); }</p>
 <p class="p2"><br></p>
+<p class="p1">.home-btn {</p>
+<p class="p1">padding: 0.75rem 1.5rem;</p>
+<p class="p1">background: var(–zero-orange);</p>
+<p class="p1">color: var(–zero-navy);</p>
+<p class="p1">border: none;</p>
+<p class="p1">border-radius: 4px;</p>
+<p class="p1">cursor: pointer;</p>
+<p class="p1">font-family: inherit;</p>
+<p class="p1">font-size: 0.875rem;</p>
+<p class="p1">font-weight: 600;</p>
+<p class="p1">transition: all 0.3s ease;</p>
+<p class="p1">text-decoration: none;</p>
+<p class="p1">display: inline-block;</p>
+<p class="p1">}</p>
+<p class="p2"><br></p>
+<p class="p1">.home-btn:hover {</p>
+<p class="p1">background: var(–zero-navy);</p>
+<p class="p1">color: var(–zero-white);</p>
+<p class="p1">transform: translateY(-2px);</p>
+<p class="p1">box-shadow: 0 4px 12px rgba(249, 186, 0, 0.3);</p>
+<p class="p1">}</p>
+<p class="p2"><br></p>
 <p class="p1">.container {</p>
 <p class="p1">max-width: 1600px;</p>
 <p class="p1">margin: 0 auto;</p>
